# test

./: configs  trust-policy-updated.json
.github/workflows/: cd-pipeline.yml  change-detection.yml  docker-build.yml  python-linting.yml  release-trigger.yml  require-linear-or-dependabot.yml  tag-build.yml  unittests.yml
aws-oidc-setup/: permissions-policy.json  trust-policy.json
images/: build-dockerfile.sh
images/Dockerfiles/mock-client/: Dockerfile
impalaai/: Dockerfile.infrastructure_monitoring  pyproject.toml
monitoring/: Dockerfile.metrics_collector
runner/: Dockerfile  pyproject.toml
